--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "color-collection",
-  "main": "./lib/color-collection",
+  "main": "./lib/index",
   "version": "0.0.0",
   "description": "A short description of your package",
   "keywords": [],
